# zhoskiy-bench-rust

./: .env  Cargo.toml  Dockerfile
src/: main.rs
