[package]
name = "zhoskiy-bench-rust"
version = "0.1.0"
authors = ["Vlad May <enity.w@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.4.2", features = ["mysql",  "runtime-actix-native-tls"] }
dotenv = "0.15.0"
